samples/_failures_safe/1761333247_356396_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae0a03fe.c: In function ‘main’:
./samples/SAFE/__tmp_ae0a03fe.c:163:79: error: ‘output’ undeclared (first use in this function)
  163 |     struct compression_result result = compress_data(input_buffer, input_len, output
      |                                                                               ^~~~~~
./samples/SAFE/__tmp_ae0a03fe.c:163:79: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ae0a03fe.c:163:85: error: expected ‘)’ at end of input
  163 |     struct compression_result result = compress_data(input_buffer, input_len, output
      |                                                     ~                               ^
      |                                                                                     )
./samples/SAFE/__tmp_ae0a03fe.c:163:40: error: too few arguments to function ‘compress_data’
  163 |     struct compression_result result = compress_data(input_buffer, input_len, output
      |                                        ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ae0a03fe.c:77:27: note: declared here
   77 | struct compression_result compress_data(const uint8_t *input, size_t input_len, uint8_t *output, size_t output_len, enum compression_type type) {
      |                           ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ae0a03fe.c:163:12: error: expected declaration or statement at end of input
  163 |     struct compression_result result = compress_data(input_buffer, input_len, output
      |            ^~~~~~~~~~~~~~~~~~
